[gd_scene load_steps=3 format=3 uid="uid://dscvwsl6ffi5a"]

[ext_resource type="Script" path="res://Scripts/Brick.gd" id="1_jouii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3l3j"]
size = Vector2(127, 127)

[node name="Brick" type="Area2D"]
position = Vector2(579, 208)
scale = Vector2(1, 0.12)
script = ExtResource("1_jouii")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -65.0
offset_top = -67.0
offset_right = 62.0
offset_bottom = 67.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_x3l3j")

[node name="RightLimit" type="Node2D" parent="."]
position = Vector2(62, 0)

[node name="BottomLimit" type="Node2D" parent="."]
position = Vector2(0, -63.947)

[node name="TopLimit" type="Node2D" parent="."]
position = Vector2(0, 63.918)

[node name="LeftLimit" type="Node2D" parent="."]
position = Vector2(-64.985, 0)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
